--- a/smart-share/package.json
+++ b/smart-share/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "babel-plugin-root-import": "^6.4.1",
     "expo": "35.0.0",
     "expo-font": "~7.0.0",
     "expo-secure-store": "^7.0.0",
