--- a/smart-share/jsconfig.json
+++ b/smart-share/jsconfig.json
@@ -14,6 +14,9 @@
       "reducers/*": [
         "src/reducers/*"
       ],
+      "styles/*": [
+        "styles/*"
+      ],
       "assets/*": [
         "assets/*"
       ]
