--- a/smart-share/package.json
+++ b/smart-share/package.json
@@ -19,6 +19,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "1.3.0",
+    "react-native-photo-upload": "^1.3.0",
     "react-native-qrcode-svg": "6.0.1",
     "react-native-reanimated": "1.2.0",
     "react-native-svg": "9.9.5",
