--- a/smart-share/package.json
+++ b/smart-share/package.json
@@ -12,14 +12,16 @@
     "babel-plugin-root-import": "^6.4.1",
     "expo": "35.0.0",
     "expo-font": "~7.0.0",
+    "expo-image-manipulator": "^7.0.0",
+    "expo-image-picker": "^7.0.0",
     "expo-secure-store": "^7.0.0",
+    "image-size": "^0.8.3",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "1.3.0",
-    "react-native-photo-upload": "^1.3.0",
     "react-native-qrcode-svg": "6.0.1",
     "react-native-reanimated": "1.2.0",
     "react-native-svg": "9.9.5",
@@ -27,7 +29,9 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "thunk": "0.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
