--- a/smart-share/package.json
+++ b/smart-share/package.json
@@ -13,6 +13,7 @@
     "expo": "35.0.0",
     "expo-font": "~7.0.0",
     "expo-secure-store": "^7.0.0",
+    "lodash": "^4.17.15",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
